--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
+    "resolveJsonModule": z,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
